# jax_sourceror

./: README.md  pyproject.toml
src/jax_automin/: interpreter.py  utils.py
src/jax_sourceror/: __init__.py  interpreter.py  utils.py
tests/: test_jaxpr_to_source.py
