[build-system]
requires = ["setuptools>=58.0.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-sourceror"
version = "0.0.1"
authors = [
  { name="David Hall", email="dlwh@cs.stanford.edu" },
]
description = "Named Tensors for Legible Deep Learning in JAX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
]
dependencies = [
    # we'll require that you install jax yourself, since the extras vary by system.
    # jax = {version = ">=0.4.10,<0.5.0"}
    "jax",
    "numpy",
    "ast_comments",
    "equinox"
]


[project.urls]
"Homepage" = "https://github.com/dlwh/jax-sourceror"
"Bug Tracker" = "https://github.com/dlwh/jax-sourceror/issues"
